fix(1395): stepper compact variant's step label style align with figma design

--- a/packages/components/src/components/stepper/step/step.scss
+++ b/packages/components/src/components/stepper/step/step.scss
@@ -16,7 +16,7 @@
         .step-label{
             max-width: 100%;
             cursor: auto;
-            text-align: left;
+            align-self: flex-start;
         }
         
         &.indicator-left {
